sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value l
  l= getNombreValeurs()
  ^AlgInsertionSort:4: error: not found: value l
  for (i <- 1 to l-1){
                 ^AlgInsertionSort:6: error: not found: value l
    for (n<- 1 to l){
                  ^