sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  l= getNombreValeurs()
  for (i <- 1 to l-1){
    var v = i
    for (n<- 1 to l){
      if ( i-n > v){
        copie(i-n, i)
    }
   }  
  }
}